--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,34 +5,27 @@
   <body>
     <h1>Joshua Emmanuel Patrick</h1>
     <div class="Test">
-    <img class="me" src="ME.jpg" />
+      <img class="me" src="ME.jpg" />
     </div>
     <div class="Intro">
-        <h5>Socials
+      <h5>
+        Socials
         <ul class="Socials">
-            <li>
-              <a href="https://Instagram.com"
-                >Instagram</a
-              >
-            </li>
-            <li>
-                <a href="https://Twitter.com"
-                  >Twitter</a
-                >
-              </li>
-              <li>
-                <a href="https://facebook.com"
-                  >Facebook</a
-                >
-              </li>
-              <li>
-                <a href="https://sg.linkedin.com/"
-                  >LinkedIn</a
-                >
-              </li>
-          </ul>
-        </h5>
-          <!-- Didn't put real socials on purpose -->
+          <li>
+            <a href="https://Instagram.com">Instagram</a>
+          </li>
+          <li>
+            <a href="https://Twitter.com">Twitter</a>
+          </li>
+          <li>
+            <a href="https://facebook.com">Facebook</a>
+          </li>
+          <li>
+            <a href="https://sg.linkedin.com/">LinkedIn</a>
+          </li>
+        </ul>
+      </h5>
+      <!-- Didn't put real socials on purpose -->
       <h5>
         GitHub URL:
         <a href="https://github.com/JoshuaEmmanuel7"
@@ -55,15 +48,17 @@
 
       <p>
         Welcome to my profile page. Here you will learn more about me. I am 29
-        years old and I have recently started on a new journey in life. No
+        years old and I have recently started on a new journey in life, No
         actually a few new journeys... Well firstly I just got married this year
-        and so far its been great as me and my wife enjoy having our own space
-        and spending together, Speaking of space, I recently bought a house as
-        well, in todays market I am happy we have a place of our own. And lastly
-        the most interesting one I have decided to actually Study again after
-        almost 10 years, I would say it's long overdue I always liked creating
-        stuff but after 2 years of national service I didn't feel like I had the
-        confidence to start programming again.
+        and so far its been great as my wife and I enjoy having our own space
+        and spending time together, Speaking of space, I recently bought a house
+        as well, in todays market I am happy we have a place of our own. And
+        lastly for the most interesting thing, I have decided to actually Study
+        again after almost 10 years, I would say it's been long overdue as I
+        have always liked creating things but after 2 years of national service
+        I didn't feel like I had the confidence to start programming again as I
+        felt I have forgotten everything but surprisingly it is all coming back
+        to me and I am having so much fun.
       </p>
     </div>
     <!-- Add Code Here -->
